--- a/hello.html
+++ b/hello.html
@@ -4,7 +4,8 @@
 		<title>My Webpage!</title>
 	</head>
 	<body>
-		Hello world! cheeky 
-		whatup
+		<h1>Hello world! cheeky </h1>
+		<h2>whatup</h2>
+		<h3>small</h3>
 	</body>
 </html>
