trying out lists

--- a/hello.html
+++ b/hello.html
@@ -7,5 +7,17 @@
 		<h1>Hello world! cheeky </h1>
 		<h2>whatup</h2>
 		<h3>small</h3>
+		<ul>
+			<li>Banana</li>
+			<li>Apple</li>
+			<li>Pineapple</li>
+		</ul>
+
+		<ol>
+			<li>monkey</li>
+			<li>Lizard</li>
+			<li>Penguin</li>
+		</ol>
+		
 	</body>
 </html>
