html lesson basics

--- a/hello.html
+++ b/hello.html
@@ -6,7 +6,22 @@
 	<body>
 		<h1>Hello world! cheeky </h1>
 		<h2>whatup</h2>
-		<h3>small</h3>
+		<h3>Ash's Geschwister</h3>
+		<table>
+			<tr>
+				<th>First Name</th>
+				<th>Age</th>
+			</tr>
+			<tr>
+				<td>Beth</td>
+				<td>19</td>
+			</tr>
+			<tr>
+				<td>Louie</td>
+				<td>8</td>
+			</tr>
+		</table>
+
 		<ul>
 			<li>Banana</li>
 			<li>Apple</li>
@@ -18,6 +33,11 @@
 			<li>Lizard</li>
 			<li>Penguin</li>
 		</ol>
-		<img src="cphgn.jpg">
+		<img src="cphgn.jpg" width= 20%>
+		<h1>Form</h1>
+			<form>
+				<input type='text' placeholder="Fav colour" name='fav col'>
+				<button>Click me!</button>
+			</form>
 	</body>
 </html>
