added css link to styles html

--- a/styles.html
+++ b/styles.html
@@ -2,11 +2,22 @@
 <html>
 	<head>
 		<title>Style Guide</title>
+		<style>
+			h1 {
+				color:blue;
+				text-align:center;
+			}
+			p {
+				color:grey;
+				text-align: center;
+			}
+		</style>
 	</head>
 
 	<body>
-		<h1 style="color:red;text-align:center;">Hey this is Ash's stylish web page</h1>
+		<h1>Hey this is Ash's stylish web page</h1>
 		<p>Hey just testing out a paragraph of text here.</p>
 		<p>Lol, me again. Just testing out another paragraph, nothing to see here!!</p>
+		<h1>Another header</h1>
 	</body>
 </html>
