--- a/hello.html
+++ b/hello.html
@@ -2,6 +2,18 @@
 <html>
 	<head>
 		<title>My Webpage!</title>
+		<style>
+			table {border: 2px solid black;
+					border-collapse:collapse;
+					width:40%;
+			}
+			th,td {border: 1px solid black;
+					padding:5px;
+					text-align:center;
+			}
+			th {background-color:lightblue;
+			}
+		</style>
 	</head>
 	<body>
 		<h1>Hello world! cheeky </h1>
