--- a/styles.html
+++ b/styles.html
@@ -2,22 +2,19 @@
 <html>
 	<head>
 		<title>Style Guide</title>
-		<style>
-			h1 {
-				color:blue;
-				text-align:center;
-			}
-			p {
-				color:grey;
-				text-align: center;
-			}
-		</style>
+		<link rel="stylesheet" href="styles.css"> 
 	</head>
 
 	<body>
-		<h1>Hey this is Ash's stylish web page</h1>
+		<div id="top">
+		<h1>Hey this is Ash's <span class="bold">stylish</span> web page</h1>
+		</div>
+		<div id="middle">
 		<p>Hey just testing out a paragraph of text here.</p>
-		<p>Lol, me again. Just testing out another paragraph, nothing to see here!!</p>
+		</div>
+		<div id="bottom">
+		<p><span class="bold">Lol</span>, me again. Just testing out another paragraph, nothing to see here!!</p>
+		</div>
 		<h1>Another header</h1>
 	</body>
 </html>
