checking out comments for git branches

--- a/kelly.html
+++ b/kelly.html
@@ -5,6 +5,8 @@
 </head>
 <body>
 	<h1>What's up my name is kelly</h1>
-	<h2>I love cats!! like so much</h2>
+	<h2>I love cats!! like so much
+		is this okay?
+	</h2>
 </body>
 </html>
