--- a/kelly.html
+++ b/kelly.html
@@ -6,5 +6,7 @@
 <body>
 	<h1>What's up my name is kelly</h1>
 	<h2>I love cats!! like so much</h2>
+
+	<a href="cat_images.html">Click to see my fav cats!</a>
 </body>
 </html>
