--- a/kelly.html
+++ b/kelly.html
@@ -33,7 +33,7 @@
 </head>
 <body>
 	<h1>What's up my name is Kelly</h1>
-	<img src="C:\Users\arend\OneDrive\Documents\CS50_Lecture_Course\FEB_2019_CS50\kelly.jpg" class="center">
+	<img class="center" src="kelly.jpg">
 	<h2>I love cats!! like so much</h2>
 	<ul>
 		<li>
